# fraction-package

./: LICENSE.txt  README.md  examples.py  pyproject.toml
src/: fraction.py
test/: test_fraction.py
