[project]
name = "fraction-raj"
version = "1.0.1"
description = "Fraction datatype implemented using Python magic methods"
readme = "README.md"
requires-python = ">=3.10"


authors = [
    {name = "Rajesh Phulwaria"}
]

license = {text = "MIT"}

keywords = [
    "fraction",
    "math",
    "python",
    "magic methods"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/RajeshPhulwaria006/fraction-raj"
Repository = "https://github.com/RajeshPhulwaria006/fraction-raj"
Issues = "https://github.com/RajeshPhulwaria006/fraction-raj/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]